Time Series Sales Forecasting

--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -9,7 +9,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 12,
+            "execution_count": 1,
             "metadata": {},
             "outputs": [
                 {
@@ -115,7 +115,7 @@
                             "[366 rows x 2 columns]"
                         ]
                     },
-                    "execution_count": 12,
+                    "execution_count": 1,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -129,7 +129,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 13,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [
                 {
@@ -144,7 +144,7 @@
                             "Name: sales, dtype: float64"
                         ]
                     },
-                    "execution_count": 13,
+                    "execution_count": 2,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -160,7 +160,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 14,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [
                 {
@@ -191,7 +191,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "Q: Which is the tensor in the time series?\n",
+                "Q: What is the tensor in the time series?\n",
                 "\n",
                 "Graphically the tensor is represented in increments of 2 months and the dataset itself appeears to track its data monthly.\n",
                 "\n",
@@ -201,17 +201,12 @@
                 "\n",
                 "Q: Is it stationary?\n",
                 "\n",
-                "Being as the plot is continually increasing along the y-axis (sales increasing), this time series would not be considered stationary.\n",
-                "\n",
-                "Q: \n",
-                "\n",
-                "\n",
-                "\n"
+                "Being as the plot is continually increasing along the y-axis (sales increasing), this time series would not be considered stationary."
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 22,
+            "execution_count": 4,
             "metadata": {},
             "outputs": [
                 {
@@ -234,7 +229,7 @@
                             "dtype: float64"
                         ]
                     },
-                    "execution_count": 22,
+                    "execution_count": 4,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -256,31 +251,24 @@
             ]
         },
         {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": []
-        },
-        {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "Noting that the p-value generated a value of 0.986, the series is not stationary, and we can work with this time series without transformation."
+                "Noting that the p-value generated a value of 0.986, the series is not stationary, and we can work with this time series making a transformation."
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 18,
+            "execution_count": 5,
             "metadata": {},
             "outputs": [
                 {
                     "data": {
                         "text/plain": [
-                            "<statsmodels.tsa.seasonal.DecomposeResult at 0x7f201fd90b80>"
+                            "<statsmodels.tsa.seasonal.DecomposeResult at 0x7f280b5b3940>"
                         ]
                     },
-                    "execution_count": 18,
+                    "execution_count": 5,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -294,7 +282,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 20,
+            "execution_count": 6,
             "metadata": {},
             "outputs": [
                 {
@@ -325,7 +313,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 26,
+            "execution_count": 7,
             "metadata": {},
             "outputs": [
                 {
@@ -346,7 +334,7 @@
                             "Name: sales, Length: 366, dtype: float64"
                         ]
                     },
-                    "execution_count": 26,
+                    "execution_count": 7,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -357,7 +345,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 28,
+            "execution_count": 8,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -366,7 +354,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 29,
+            "execution_count": 9,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -375,7 +363,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 37,
+            "execution_count": 10,
             "metadata": {},
             "outputs": [
                 {
@@ -401,7 +389,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 21,
+            "execution_count": 11,
             "metadata": {},
             "outputs": [
                 {
@@ -432,7 +420,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 23,
+            "execution_count": 12,
             "metadata": {},
             "outputs": [
                 {
@@ -463,7 +451,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 25,
+            "execution_count": 13,
             "metadata": {},
             "outputs": [
                 {
@@ -478,6 +466,8 @@
                 }
             ],
             "source": [
+                "# Assessing the autocorrelation\n",
+                "\n",
                 "from statsmodels.graphics.tsaplots import plot_acf\n",
                 "\n",
                 "plot_acf(time_series_df)\n",
@@ -489,7 +479,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 47,
+            "execution_count": 14,
             "metadata": {},
             "outputs": [
                 {
@@ -505,20 +495,20 @@
                     "output_type": "stream",
                     "text": [
                         "Performing stepwise search to minimize aic\n",
-                        " ARIMA(2,1,2)(0,0,0)[0] intercept   : AIC=1843.274, Time=0.44 sec\n",
-                        " ARIMA(0,1,0)(0,0,0)[0] intercept   : AIC=2096.542, Time=0.02 sec\n",
+                        " ARIMA(2,1,2)(0,0,0)[0] intercept   : AIC=1843.274, Time=0.43 sec\n",
+                        " ARIMA(0,1,0)(0,0,0)[0] intercept   : AIC=2096.542, Time=0.01 sec\n",
                         " ARIMA(1,1,0)(0,0,0)[0] intercept   : AIC=1970.972, Time=0.04 sec\n",
-                        " ARIMA(0,1,1)(0,0,0)[0] intercept   : AIC=1839.586, Time=0.22 sec\n",
-                        " ARIMA(0,1,0)(0,0,0)[0]             : AIC=2209.657, Time=0.01 sec\n",
-                        " ARIMA(1,1,1)(0,0,0)[0] intercept   : AIC=1839.552, Time=0.23 sec\n",
-                        " ARIMA(2,1,1)(0,0,0)[0] intercept   : AIC=1841.532, Time=0.46 sec\n",
-                        " ARIMA(1,1,2)(0,0,0)[0] intercept   : AIC=1843.586, Time=0.16 sec\n",
-                        " ARIMA(0,1,2)(0,0,0)[0] intercept   : AIC=1839.607, Time=0.18 sec\n",
-                        " ARIMA(2,1,0)(0,0,0)[0] intercept   : AIC=1922.648, Time=0.06 sec\n",
+                        " ARIMA(0,1,1)(0,0,0)[0] intercept   : AIC=1839.586, Time=0.13 sec\n",
+                        " ARIMA(0,1,0)(0,0,0)[0]             : AIC=2209.657, Time=0.02 sec\n",
+                        " ARIMA(1,1,1)(0,0,0)[0] intercept   : AIC=1839.552, Time=0.32 sec\n",
+                        " ARIMA(2,1,1)(0,0,0)[0] intercept   : AIC=1841.532, Time=0.43 sec\n",
+                        " ARIMA(1,1,2)(0,0,0)[0] intercept   : AIC=1843.586, Time=0.27 sec\n",
+                        " ARIMA(0,1,2)(0,0,0)[0] intercept   : AIC=1839.607, Time=0.19 sec\n",
+                        " ARIMA(2,1,0)(0,0,0)[0] intercept   : AIC=1922.648, Time=0.07 sec\n",
                         " ARIMA(1,1,1)(0,0,0)[0]             : AIC=inf, Time=0.26 sec\n",
                         "\n",
                         "Best model:  ARIMA(1,1,1)(0,0,0)[0] intercept\n",
-                        "Total fit time: 2.091 seconds\n"
+                        "Total fit time: 2.172 seconds\n"
                     ]
                 }
             ],
@@ -530,7 +520,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 53,
+            "execution_count": 15,
             "metadata": {},
             "outputs": [
                 {
@@ -550,7 +540,7 @@
                             "Freq: D, Length: 100, dtype: float64"
                         ]
                     },
-                    "execution_count": 53,
+                    "execution_count": 15,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -562,7 +552,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 54,
+            "execution_count": 16,
             "metadata": {},
             "outputs": [
                 {
@@ -589,7 +579,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 44,
+            "execution_count": 17,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -599,7 +589,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 46,
+            "execution_count": 18,
             "metadata": {},
             "outputs": [
                 {
@@ -615,20 +605,20 @@
                     "output_type": "stream",
                     "text": [
                         "Performing stepwise search to minimize aic\n",
-                        " ARIMA(2,0,2)(0,0,0)[0]             : AIC=inf, Time=0.45 sec\n",
+                        " ARIMA(2,0,2)(0,0,0)[0]             : AIC=inf, Time=0.47 sec\n",
                         " ARIMA(0,0,0)(0,0,0)[0]             : AIC=2060.797, Time=0.01 sec\n",
                         " ARIMA(1,0,0)(0,0,0)[0]             : AIC=1937.952, Time=0.02 sec\n",
                         " ARIMA(0,0,1)(0,0,0)[0]             : AIC=inf, Time=0.08 sec\n",
                         " ARIMA(2,0,0)(0,0,0)[0]             : AIC=1895.411, Time=0.03 sec\n",
-                        " ARIMA(3,0,0)(0,0,0)[0]             : AIC=1849.561, Time=0.04 sec\n",
-                        " ARIMA(4,0,0)(0,0,0)[0]             : AIC=1814.857, Time=0.04 sec\n",
+                        " ARIMA(3,0,0)(0,0,0)[0]             : AIC=1849.561, Time=0.07 sec\n",
+                        " ARIMA(4,0,0)(0,0,0)[0]             : AIC=1814.857, Time=0.09 sec\n",
                         " ARIMA(5,0,0)(0,0,0)[0]             : AIC=1802.085, Time=0.06 sec\n",
-                        " ARIMA(5,0,1)(0,0,0)[0]             : AIC=inf, Time=0.43 sec\n",
-                        " ARIMA(4,0,1)(0,0,0)[0]             : AIC=inf, Time=0.41 sec\n",
+                        " ARIMA(5,0,1)(0,0,0)[0]             : AIC=inf, Time=0.99 sec\n",
+                        " ARIMA(4,0,1)(0,0,0)[0]             : AIC=inf, Time=0.43 sec\n",
                         " ARIMA(5,0,0)(0,0,0)[0] intercept   : AIC=1804.085, Time=0.12 sec\n",
                         "\n",
                         "Best model:  ARIMA(5,0,0)(0,0,0)[0]          \n",
-                        "Total fit time: 1.685 seconds\n"
+                        "Total fit time: 2.390 seconds\n"
                     ]
                 }
             ],
@@ -640,7 +630,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 52,
+            "execution_count": 19,
             "metadata": {},
             "outputs": [
                 {
@@ -660,7 +650,7 @@
                             "Freq: D, Length: 100, dtype: float64"
                         ]
                     },
-                    "execution_count": 52,
+                    "execution_count": 19,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -672,7 +662,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 50,
+            "execution_count": 22,
             "metadata": {},
             "outputs": [
                 {
@@ -692,7 +682,7 @@
                 "fig, axis = plt.subplots(figsize = (10, 5))\n",
                 "\n",
                 "sns.lineplot(data = ts_stationary)\n",
-                "sns.lineplot(data = forecast, c = \"orange\")\n",
+                "sns.lineplot(data = stationary_forecast, c = \"orange\")\n",
                 "\n",
                 "plt.tight_layout()\n",
                 "\n",
@@ -701,38 +691,19 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 15,
-            "metadata": {},
-            "outputs": [
-                {
-                    "data": {
-                        "text/plain": [
-                            "'Step 2: Construct and analyze the time serie\\nConstruct the valid data structure for the time serie, graph it, and then analyze it and answer the following questions:\\n\\nWhich is the tensor of the time series?\\nWhat is the trend?\\nIs it stationary?\\nIs there variability or noise?\\nNOTE: A tensor in a time serie is the minimum unit of time for which there is data. It can be every second, minute, hour, day, week, month...\\n\\nStep 3: Train an ARIMA\\nUse the training data to find the best parameterization of your ARIMA model.\\n\\nStep 4: Predict with the test set\\nNow use the trained model with the test set and compare the points with the real ones. Measure the performance of the time serie.'"
-                        ]
-                    },
-                    "execution_count": 15,
-                    "metadata": {},
-                    "output_type": "execute_result"
-                }
-            ],
-            "source": [
-                "'''\n",
-                "Is there variability or noise?\n",
-                "\n",
-                "Step 3: Train an ARIMA\n",
-                "Use the training data to find the best parameterization of your ARIMA model.\n",
-                "\n",
-                "Step 4: Predict with the test set\n",
-                "Now use the trained model with the test set and compare the points with the real ones. Measure the performance of the time serie.'''\n",
-                "\n"
-            ]
-        },
-        {
-            "cell_type": "code",
             "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": []
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "\n",
+                "Step 4: Predict with the test set\n",
+                "Now use the trained model with the test set and compare the points with the real ones. Measure the performance of the time series."
+            ]
         },
         {
             "cell_type": "markdown",
